--- a/pr.css
+++ b/pr.css
@@ -16,7 +16,7 @@ body{
     font-size: 40px;
 }
 .title{
-    width: 32%;
+    width: 36%;
     height: 100%;
     background-color: white;
     padding: 50px;    
@@ -62,7 +62,8 @@ body{
 
 
 .middle{
-    width: 18%;
+    width: 19%;
+    
     display: flex;
     text-align: right;
     justify-content: flex-end;
@@ -71,7 +72,7 @@ body{
 }
 .arrowUp , .arrowDown{
       color: gray;    
-     margin: 15px ;
+     margin: 11px ;
     cursor: pointer;
 }
 .arrowUp:hover, .arrowDown:hover{
@@ -86,35 +87,47 @@ body{
     list-style: none;
     background: maroon;
     color: white;
-    margin: 40px 0;
+    margin: 41px 0;
     text-align: center; 
     font-size: 18px;
     border:5px groove pink;
     border-radius: 0 60% 60% 0px;
 }
+.track{
+    position: relative;
+    width: 10px;
+}
 .scroll{
-    width: 4px;
-    height: 20px;
+    width: 8px;
+    height: 21%;
     padding: 0;
     margin: 0;
     float: right;
     border: 2px solid red;
+    background-color: red;
+    transition: height 750ms ease-in;
 }
+
+
 .bench{
     padding: 0;
     margin: 0;   
+    position: absolute;
 }
 .mark{
     list-style:none;
     padding: 0;
-    margin: 10px 0;  
+    margin: 9px 0;  
 }
 .mark::after{
     content: "_";
     display: block;
     color: gray; 
-}.screen{
-    width: 30%;
+    height: 100px;
+    font-size: 25px;
+}
+.screen{
+    width: 45%;
     height: 100%;
     position: relative;
 }
@@ -173,9 +186,11 @@ body{
 .prjctImg{
     width: 100%;
     height: 100%;
-    //object-fit: contain;
    filter: grayscale(100%);
     display: none;
+}
+.fit{
+   // object-fit: cover;
 }
 .activeImg{
     display: block;
