--- a/pr.css
+++ b/pr.css
@@ -1,35 +1,65 @@
-*{
+* {
     box-sizing: border-box;
 }
-body{
+
+body {
     margin: 0 auto;
     width: 100%;
     background: tan;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-.work{
+
+.work {
     position: fixed;
     display: flex;
     height: 100%;
+    width: 100%;
 }
-.fas{
+
+.fas {
     font-size: 40px;
 }
-.title{
-    width: 36%;
+
+.title {
+    width: 38%;
     height: 100%;
     background-color: white;
-    padding: 50px;    
+    padding: 50px;
 }
-.avat{
+
+.main_content::after {
+    content: "";
+    height: 120px;
+    ;
+    display: block;
+}
+
+.avatar {
     width: 70%;
     height: 200px;
-    object-fit:cover;  
+    object-fit: cover;
 }
-.name{
-    cursor: pointer;   
+
+.workName, .workType, .workCode {
+    position: relative;
+    overflow: hidden;
+    margin: 15px 0px;
+    width: 100%;
 }
-.name::before, .footer::before{
+
+.workName {
+    height: 60px;
+}
+
+.workType {
+    height: 25px;
+}
+
+.workCode {
+    height: 35px;
+}
+
+.workTitle::before, .footer::before {
     content: "";
     display: block;
     width: 5px;
@@ -38,66 +68,103 @@ body{
     border: 1px solid brown;
     transition: all 900ms ease-in-out;
 }
-.name:hover::before, .footer:hover::before{
+
+.workTitle:hover::before, .footer:hover::before {
     width: 100%;
     border: 1px solid green;
     background-color: green;
 }
-.type{
-    font-size: 20px;
-    margin: 1px;
+
+.titleContainer, .typeContainer, .codeContainer {
+    position: absolute;
+    transform: translateY(0%);
+    transition: all 1s ease-in;
+    width: 100%;
+    margin: 0;
+    padding: 0;
 }
-.codeIcon, .code{   
-    font-size: 25px; 
+
+.workTitle {
+    list-style: none;
+    padding: 6px 0;
+    cursor: pointer;
 }
-.main_content::after{
-    content: "";
-    height: 150px;
+
+.workTitle>p {
+    font-size: 33px;
+    font-weight: bold;
+    margin: 0;
+}
+
+.type {
+    font-size: 16px;
+    list-style: none;
+    padding: 2px 0;
+}
+
+.type>p {
+    margin: 0;
+}
+
+.codeIcon, .code {
+    font-size: 25px;
+}
+
+.code {
+    padding: 1px 0;
     display: block;
 }
-.footer{
+
+.footer {
     display: inline-block;
     cursor: pointer;
 }
 
-
-.middle{
+.middle {
     width: 19%;
-    
     display: flex;
     text-align: right;
     justify-content: flex-end;
     background-color: white;
-    
 }
-.arrowUp , .arrowDown{
-      color: gray;    
-     margin: 11px ;
+
+.arrowUp, .arrowDown {
+    color: gray;
+    margin: 11px;
     cursor: pointer;
 }
-.arrowUp:hover, .arrowDown:hover{
-    color: black; 
+
+.arrowUp:hover, .arrowDown:hover {
+    color: black;
 }
-.contents{
-    margin:  0;
+
+.contents {
+    margin: 0;
     padding: 0;
 }
-.work_list{
-    padding: 9px  ;
+
+.work_list:nth-child(1) {
+    background: purple;
+}
+
+.work_list {
+    padding: 9px;
     list-style: none;
     background: maroon;
     color: white;
     margin: 41px 0;
-    text-align: center; 
+    text-align: center;
     font-size: 18px;
-    border:5px groove pink;
+    border: 5px groove pink;
     border-radius: 0 60% 60% 0px;
 }
-.track{
+
+.track {
     position: relative;
     width: 10px;
 }
-.scroll{
+
+.scroll {
     width: 8px;
     height: 21%;
     padding: 0;
@@ -105,93 +172,105 @@ body{
     float: right;
     border: 2px solid red;
     background-color: red;
-    transition: height 750ms ease-in;
+    transition: height 550ms ease-in;
 }
 
-
-.bench{
+.bench {
     padding: 0;
-    margin: 0;   
+    margin: 0;
     position: absolute;
 }
-.mark{
-    list-style:none;
+
+.mark {
+    list-style: none;
     padding: 0;
-    margin: 9px 0;  
+    margin: 9px 0;
 }
-.mark::after{
+
+.mark::after {
     content: "_";
     display: block;
-    color: gray; 
+    color: gray;
     height: 100px;
     font-size: 25px;
 }
-.screen{
+
+.screen {
     width: 45%;
     height: 100%;
     position: relative;
 }
-.iconPosition{
+
+.iconPosition {
     position: absolute;
     top: 50%;
     left: 5%;
     border-radius: 50%;
     z-index: 5;
 }
-.iconContainer{
+
+.iconContainer {
     position: relative;
     width: 50px;
     height: 50px;
     background: yellow;
     border-radius: 50%;
 }
-.backScale{
+
+.backScale {
     position: absolute;
     width: inherit;
     height: inherit;
     background: red;
     transform: scale(1);
-    transition: transform 350ms ease-in ;
+    transition: transform 350ms ease-in;
     border-radius: 50%;
-    cursor: pointer;    
+    cursor: pointer;
 }
-.iconContainer:hover .backScale{
+
+.iconContainer:hover .backScale {
     transform: scale(1.5);
 }
-.icon{
+
+.icon {
     position: absolute;
     left: 15px;
     top: 5px;
-    cursor: pointer; 
+    cursor: pointer;
     color: white;
 }
-.close{
-   color: white;
-  //  position: absolute;
+
+.close {
+    color: white; //  position: absolute;
     //top: 0;
     opacity: 0;
     font-size: 30px;
-    padding: 5px 0;
-  //  display: none;
+    padding: 5px 0; //  display: none;
 }
-.change{ 
+
+.change {
     top: -35px;
 }
-.icon.change .arrowRight{
+
+.icon.change .arrowRight {
     opacity: 0;
 }
-.icon.change .close{
+
+.icon.change .close {
     opacity: 1;
 }
-.prjctImg{
+
+.prjctImg {
     width: 100%;
-    height: 100%;
-   filter: grayscale(100%);
-    display: none;
-}
-.fit{
-   // object-fit: cover;
-}
-.activeImg{
+    height: 100vh;
+    filter: grayscale(100%);
+    margin: 0;
     display: block;
+}
+
+.imgContainer {
+    background: yellow;
+    position: absolute;
+    top: 0;
+    transition: top 1s ease-in;
 }
