--- a/pr.css
+++ b/pr.css
@@ -16,15 +16,46 @@ body {
     position: relative;
 }
 
+.aboutContact, .workDetail {
+    position: absolute;
+    left: -50%;
+    width: 50%;
+    height: 100vh;
+    background: rgb(32, 31, 31);
+    color: beige;
+    padding: 50px;
+    text-align: right;
+}
+
+.workDetail {
+    left: 100%;
+    background-color: white;
+}
+
+.about {
+    font-size: 22px;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.email {
+    font-size: 18px;
+    display: inline-block;
+    cursor: pointer;
+}
+
 .socialContainer {
     padding: 0;
     display: flex;
     justify-content: space-evenly;
     list-style: none;
 }
-.social>p{
-    margin: 0;
+
+.social>p, .leftPage>p {
+    margin: 8px 0;
+    cursor: pointer;
 }
+
 .work {
     position: absolute;
     display: flex;
@@ -33,11 +64,15 @@ body {
     left: 0;
 }
 
-.slideLeft {
-    animation: slideLeft 2s ease-in 0s normal forwards;
+.slideRight {
+    animation: slideRight 350ms ease-in 0s normal forwards;
 }
 
-@keyframes slideLeft {
+.slideLeft {
+    animation: slideLeft 350ms ease-in 0s normal forwards;
+}
+
+@keyframes slideRight {
     0% {
         transform: translateX(0%);
     }
@@ -46,14 +81,39 @@ body {
     }
 }
 
-.aboutContact {
-    position: absolute;
-    left: -50%;
-    width: 50%;
-    height: 100vh;
-    background: black;
-    display: inline-block;
-    color: beige;
+@keyframes slideLeft {
+    0% {
+        transform: translateX(50%);
+    }
+    100% {
+        transform: translateX(0%);
+    }
+}
+
+.slideLeftImg {
+    animation: slideLeftImg 350ms ease-in 0s normal forwards;
+}
+
+.slideRightImg {
+    animation: slideRightImg 350ms ease-in 0s normal forwards;
+}
+
+@keyframes slideLeftImg {
+    0% {
+        transform: translateX(0%);
+    }
+    100% {
+        transform: translateX(-56%);
+    }
+}
+
+@keyframes slideRightImg {
+    0% {
+        transform: translateX(-56%);
+    }
+    100% {
+        transform: translateX(0%);
+    }
 }
 
 .fas {
@@ -67,10 +127,14 @@ body {
     padding: 50px;
 }
 
-.main_content::after, .email::after {
+.main_content::after, .headerInfo::after {
     content: "";
-    height: 120px;
+    height: 100px;
     display: block;
+}
+
+.headerInfo::after {
+    height: 150px;
 }
 
 .avatar {
@@ -79,7 +143,7 @@ body {
     object-fit: cover;
 }
 
-.workName, .workType, .workCode {
+.workName, .workType, .workCode, .footer {
     position: relative;
     overflow: hidden;
     margin: 15px 0px;
@@ -98,7 +162,7 @@ body {
     height: 35px;
 }
 
-.workTitle::before, .footer::before, .social::before, .email::before {
+.workTitle::before, .leftPage::before, .about::before, .social::before, .email::before {
     content: "";
     display: block;
     width: 5px;
@@ -108,13 +172,17 @@ body {
     transition: all 900ms ease-in-out;
 }
 
-.workTitle:hover::before, .footer:hover::before {
+.about::before, .social::before, .email::before {
+    float: right;
+}
+
+.workTitle:hover::before, .leftPage:hover::before, .about:hover::before, .social:hover::before, .email:hover::before {
     width: 100%;
     border: 1px solid green;
     background-color: green;
 }
 
-.titleContainer, .typeContainer, .codeContainer {
+.titleContainer, .typeContainer, .codeContainer, .transContainer {
     position: absolute;
     transform: translateY(0%);
     transition: all 1s ease-in;
@@ -141,7 +209,7 @@ body {
     padding: 2px 0;
 }
 
-.type>p {
+.type>p, .code {
     margin: 0;
 }
 
@@ -151,12 +219,22 @@ body {
 
 .code {
     padding: 1px 0;
-    display: block;
 }
 
 .footer {
     display: inline-block;
     cursor: pointer;
+    height: 40px;
+    margin-top: 20px;
+    width: 110px;
+}
+
+.leftPage {
+    list-style: none;
+}
+
+.leftPage:nth-child(2) {
+    width: 50px;
 }
 
 .middle {
@@ -234,7 +312,7 @@ body {
     font-size: 25px;
 }
 
-.screen {
+.screenshot {
     width: 45%;
     height: 100%;
     position: relative;
