--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -9,7 +9,7 @@ body {
 }
 
 .wrapper {
-    padding: 20px;
+    overflow: hidden;
     margin: 0 auto;
 }
 
@@ -62,7 +62,19 @@ body {
     left: 0;
     top: 100%;
     text-align: center;
-    color: white;
+    color: rgba(255, 255, 255, 1);
+    transition: color 250ms ease-in;
+}
+
+/*
+.intro>* {
+    opacity: 1;
+    transition: all 250ms ease-in;
+}
+*/
+
+.sliderMain.slideUp {
+    animation-delay: 200ms;
 }
 
 .hello {
@@ -92,7 +104,7 @@ body {
 
 @keyframes animate {
     0% {
-        transform: translate(0, 0);
+        transform: translateY(0);
     }
     100% {
         transform: translateY(100%);
@@ -100,31 +112,145 @@ body {
     }
 }
 
-.work {
+.fas {
+    font-size: 40px;
+}
+
+.sliderMain {
     position: fixed;
+    width: 100%;
     top: 100%;
     left: 0;
-    display: flex;
-    height: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.wrap {
     width: 100%;
+    position: relative;
+}
+
+.aboutContact {
+    position: absolute;
+    left: -50%;
+    width: 50%;
+    height: 100vh;
+    background-color: rgb(32, 31, 31);
+    color: beige;
+    padding: 50px;
+    text-align: right;
+}
+
+.rightPage {
+    position: absolute;
+    left: 100%;
+    width: 56%;
+    background-color: white;
+    height: 100vh;
+}
+
+.about {
+    font-size: 22px;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.email {
+    font-size: 18px;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.socialContainer {
+    padding: 0;
+    display: flex;
+    justify-content: space-evenly;
+    list-style: none;
+}
+
+.social>p, .leftPage>p {
+    margin: 8px 0;
+    cursor: pointer;
+}
+
+.work {
+    position: absolute;
+    display: flex;
+    height: 100vh;
+    width: 100%;
+    left: 0;
+}
+
+.slideRight {
+    animation: slideRight 350ms ease-in 0s normal forwards;
+}
+
+.slideLeft {
+    animation: slideLeft 350ms ease-in 0s normal forwards;
+}
+
+@keyframes slideRight {
+    0% {
+        transform: translateX(0%);
+    }
+    100% {
+        transform: translateX(50%);
+    }
+}
+
+@keyframes slideLeft {
+    0% {
+        transform: translateX(50%);
+    }
+    100% {
+        transform: translateX(0%);
+    }
+}
+
+.slideLeftImg {
+    animation: slideLeftImg 350ms ease-in 0s normal forwards;
+}
+
+.slideRightImg {
+    animation: slideRightImg 350ms ease-in 0s normal forwards;
+}
+
+@keyframes slideLeftImg {
+    0% {
+        transform: translateX(0%);
+    }
+    100% {
+        transform: translateX(-56%);
+    }
+}
+
+@keyframes slideRightImg {
+    0% {
+        transform: translateX(-56%);
+    }
+    100% {
+        transform: translateX(0%);
+    }
 }
 
 .fas {
     font-size: 40px;
 }
 
-.title {
+.home {
     width: 38%;
-    height: 100%;
     background-color: white;
     padding: 50px;
 }
 
-.main_content::after {
+.main_content::after, .headerInfo::after, .description::after {
     content: "";
-    height: 120px;
-    ;
+    height: 100px;
     display: block;
+}
+
+.headerInfo::after {
+    height: 150px;
 }
 
 .avatar {
@@ -133,7 +259,7 @@ body {
     object-fit: cover;
 }
 
-.workName, .workType, .workCode {
+.workName, .workType, .workCode, .footer, .workLink {
     position: relative;
     overflow: hidden;
     margin: 15px 0px;
@@ -152,7 +278,7 @@ body {
     height: 35px;
 }
 
-.workTitle::before, .footer::before {
+.workTitle::before, .leftPage::before, .about::before, .social::before, .email::before, .description::before {
     content: "";
     display: block;
     width: 5px;
@@ -162,16 +288,20 @@ body {
     transition: all 900ms ease-in-out;
 }
 
-.workTitle:hover::before, .footer:hover::before {
+.about::before, .social::before, .email::before {
+    float: right;
+}
+
+.workTitle:hover::before, .leftPage:hover::before, .about:hover::before, .social:hover::before, .email:hover::before, .description:hover::before {
     width: 100%;
     border: 1px solid green;
     background-color: green;
 }
 
-.titleContainer, .typeContainer, .codeContainer {
+.titleContainer, .typeContainer, .codeContainer, .transContainer, .linkList, .detailContainer {
     position: absolute;
     transform: translateY(0%);
-    transition: all 750ms ease-in;
+    transition: all 1s ease-in;
     width: 100%;
     margin: 0;
     padding: 0;
@@ -181,6 +311,7 @@ body {
     list-style: none;
     padding: 6px 0;
     cursor: pointer;
+    width: fit-content;
 }
 
 .workTitle>p {
@@ -195,7 +326,7 @@ body {
     padding: 2px 0;
 }
 
-.type>p {
+.type>p, .code {
     margin: 0;
 }
 
@@ -205,12 +336,18 @@ body {
 
 .code {
     padding: 1px 0;
-    display: block;
 }
 
 .footer {
     display: inline-block;
     cursor: pointer;
+    height: 40px;
+    margin-top: 20px;
+}
+
+.leftPage {
+    list-style: none;
+    width: fit-content;
 }
 
 .middle {
@@ -288,10 +425,11 @@ body {
     font-size: 25px;
 }
 
-.screen {
+.screenshot {
     width: 45%;
     height: 100%;
     position: relative;
+    user-select: none;
 }
 
 .iconPosition {
@@ -359,15 +497,49 @@ body {
 .prjctImg {
     width: 100%;
     height: 100vh;
-    filter: grayscale(100%);
     margin: 0;
+    filter: grayscale(100%);
     display: block;
+}
+
+.noFilter {
+    filter: none;
 }
 
 .imgContainer {
     position: absolute;
     top: 0;
-    transition: top 750ms ease-in;
+    transition: top 1s ease-in;
+    overflow: hidden;
+}
+
+.workLink {
+    height: 40px;
+}
+
+.workDetail {
+    position: relative;
+    height: 100%;
+}
+
+.detailContainer {
+    padding: 50px;
+}
+
+.detail {
+    list-style: none;
+}
+
+.detail>.workTitle {
+    margin: 0;
+    font-size: 33px;
+    font-weight: bold;
+}
+
+.description {
+    font-size: 22px;
+    padding: 20px 0;
+    text-indent: 50px;
 }
 
 .slideUp {
@@ -383,4 +555,147 @@ body {
         transform: translate(0, -100%);
         opacity: 1;
     }
+}
+
+.viewOnline, .snapsBtn {
+    border: 2px groove red;
+    font-weight: bold;
+    padding: 6px;
+    text-decoration: none;
+    color: red;
+    margin: 20px;
+    width: 150px;
+    text-align: center;
+    cursor: pointer;
+    box-shadow: 0px 4px 8px 1px rgba(0, 0, 0, 0.8);
+}
+
+.viewOnline {
+    display: inline-block;
+}
+
+.snapsBtn {
+    background: transparent;
+    font-size: 15px;
+    padding: 8px;
+    display: block;
+    cursor: pointer;
+}
+
+/* -----------------------------  SLIDESHOW STYLES  ----------------------------- */
+
+.slideContainer {
+    background-color: rgba(0, 0, 0, 0);
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    transform: scale(0);
+    transition: background-color 550ms ease-in, transform 100ms ease-in 550ms;
+    /*Slideshow Close transition*/
+}
+
+.open {
+    transform: scale(1);
+    background-color: rgba(0, 0, 0, 0.9);
+    transition: background-color 550ms ease-in 80ms;
+    /*Slideshow Open transition*/
+}
+
+.closeSlide {
+    position: absolute;
+    top: 20px;
+    right: 50px;
+    color: white;
+    font-size: 50px;
+    font-weight: bold;
+    z-index: 2;
+    cursor: pointer;
+}
+
+.slideContent {
+    position: relative;
+    width: 90%;
+    margin: 0px auto;
+    overflow: hidden;
+    height: 100vh;
+    transform: scale(0);
+    transition: transform 750ms ease-out;
+    /*Slideshow close transition*/
+}
+
+.slideContainer.open>.slideContent {
+    transform: scale(1);
+    transition: transform 750ms ease-in;
+}
+
+.slideNumber {
+    display: inline-block;
+    width: 100px;
+    text-align: center;
+    margin: 0px;
+    color: white;
+    font-weight: bold;
+    font-size: 25px;
+    padding: 10px;
+}
+
+.slides {
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    margin: 0px auto;
+    opacity: 0;
+    transform: translateX(100%);
+    transition: all ease-in 550ms;
+}
+
+.slideImg {
+    width: 70%;
+    height: 500px;
+    object-fit: contain;
+}
+
+.active {
+    opacity: 1;
+    transform: translateX(0%);
+}
+
+.slidePrev {
+    transform: translateX(-100%);
+}
+
+.prevSlide, .nextSlide {
+    position: absolute;
+    font-size: 50px;
+    color: white;
+    padding: 10px;
+    top: 200px;
+    cursor: pointer;
+    transition: all 550ms ease-in;
+}
+
+.disable {
+    cursor: not-allowed;
+}
+
+.nextSlide {
+    right: 0;
+}
+
+.prevSlide:hover, .nextSlide:hover {
+    background-color: rgba(49, 43, 43, 0.5);
+}
+
+.prevSlide.disable:hover, .nextSlide.disable:hover {
+    background: transparent;
+}
+
+.caption {
+    font-size: 30px;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    margin: 0;
 }
