--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -464,26 +464,35 @@ body {
 
 .icon {
     position: absolute;
-    left: 15px;
-    top: 5px;
+    left: 0px;
+    top: 0px;
     cursor: pointer;
     color: white;
+    text-align: center;
+    width: 50px;
+    height: 90px;;
 }
 
 .close {
-    color: white;
     opacity: 0;
-    font-size: 30px;
-    padding: 5px 0;
+    font-size: 36px;
+    padding: 5px;
+    border-radius: 50px;
+    display: block;
     /*
     position: absolute;
     top: 0;
     display: none;
     */
 }
+.arrowRight{
+    display: block;
+    border-radius: 50px;
+    padding: 5px;   
+}
 
 .change {
-    top: -35px;
+    top: -48px;
 }
 
 .icon.change .arrowRight {
@@ -609,8 +618,8 @@ body {
 
 .closeSlide {
     position: absolute;
-    top: 20px;
-    right: 50px;
+    top: 8px;
+    right: 34px;
     color: white;
     font-size: 50px;
     font-weight: bold;
